# rich-ollama-chat

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  theme_example.py
rich_ollama_chat/: __init__.py  chat.py  cli.py  config.py  conversation.py
tests/: __init__.py  conftest.py  test_chat.py  test_cli.py  test_conversation.py
